Reformat codebase and modernize Java syntax
- Apply consistent formatting across all sources (indentation,
  brace/spacing style, YAML list and comment alignment)
- Convert simple data holders to records and qualify field access
  with this.
- Drop .editorconfig in favor of the IDE code style