@@ -42,7 +42,7 @@ import java.util.List;
  * Represents the Lore on a Brew under Modification.
  * <p>Can efficiently replace certain lines of lore, to update brew information on an item.
  */
-public class BrewLore {
+public final class BrewLore {
 
     private static final Config config = ConfigManager.getConfig(Config.class);
     private static final Lang lang = ConfigManager.getConfig(Lang.class);
@@ -52,33 +52,92 @@ public class BrewLore {
     private final List<String> lore;
     private boolean lineAddedOrRem = false;
 
-    public BrewLore(Brew brew, PotionMeta meta) {
+    public BrewLore(final Brew brew, final PotionMeta meta) {
         this.brew = brew;
         this.meta = meta;
         this.lore = meta.hasLore() ? meta.getLore() : new ArrayList<>();
     }
 
     /**
+     * True if the PotionMeta has Lore in quality color
+     */
+    public static boolean hasColorLore(final PotionMeta meta) {
+        if (meta == null) return false;
+        if (!meta.hasLore()) return false;
+        final var lore = meta.getLore();
+        if (lore.size() < 2) {
+            return false;
+        }
+        // Ingredient lore present, must be quality colored
+        return Type.INGR.findInLore(lore) != -1;
+        //!meta.getLore().get(1).startsWith("§7");
+    }
+
+    /**
+     * gets the Color that represents a quality in Lore
+     *
+     * @param quality The Quality for which to find the color code
+     * @return Color Code for given Quality
+     */
+    public static String getQualityColor(final int quality) {
+        final String color;
+        if (quality > 8) {
+            color = "&a";
+        } else if (quality > 6) {
+            color = "&e";
+        } else if (quality > 4) {
+            color = "&6";
+        } else if (quality > 2) {
+            color = "&c";
+        } else {
+            color = "&4";
+        }
+        return BUtil.color(color);
+    }
+
+    /**
+     * Gets the icon representing a quality for use in lore
+     *
+     * @param quality The quality used for the icon
+     * @return The icon for the given quality
+     */
+    public static char getQualityIcon(final int quality) {
+        final char icon;
+        if (quality > 8) {
+            icon = '\u2605';
+        } else if (quality > 6) {
+            icon = '\u2BEA';
+        } else if (quality > 4) {
+            icon = '\u2606';
+        } else if (quality > 2) {
+            icon = '\u2718';
+        } else {
+            icon = '\u2620';
+        }
+        return icon;
+    }
+
+    /**
      * Write the new lore into the Meta.
      * <p>Should be called at the end of operation on this Brew Lore
      */
-    public PotionMeta write() {
-        if (lineAddedOrRem) {
-            updateSpacer();
+    public final PotionMeta write() {
+        if (this.lineAddedOrRem) {
+            this.updateSpacer();
         }
 
-        meta.setLore(lore);
-        return meta;
+        this.meta.setLore(this.lore);
+        return this.meta;
     }
 
     /**
      * adds or removes an empty line in lore to space out the text a bit
      */
-    public void updateSpacer() {
-        boolean hasCustom = false;
-        boolean hasSpace = false;
-        for (int i = 0; i < lore.size(); i++) {
-            Type t = Type.get(lore.get(i));
+    public final void updateSpacer() {
+        var hasCustom = false;
+        var hasSpace = false;
+        for (var i = 0; i < this.lore.size(); i++) {
+            final var t = Type.get(this.lore.get(i));
             if (t == Type.CUSTOM) {
                 hasCustom = true;
             } else if (t == Type.SPACE) {
@@ -89,29 +148,28 @@ public class BrewLore {
                 if (hasCustom || MinecraftVersion.isUseNBT()) {
                     // We want to add the spacer if we have Custom Lore, to have a space between custom and brew lore.
                     // Also add a space if there is no Custom Lore but we don't already have a invisible data line
-                    lore.add(i, Type.SPACE.id);
+                    this.lore.add(i, Type.SPACE.id);
                 }
                 return;
             }
         }
         if (hasSpace) {
             // There was a space but nothing after the space
-            removeLore(Type.SPACE);
+            this.removeLore(Type.SPACE);
         }
     }
-
 
     /**
      * Add the list of strings as custom lore for the base potion coming out of the cauldron
      */
-    public void addCauldronLore(List<String> l) {
-        int index = -1;
-        for (String line : l) {
+    public final void addCauldronLore(final List<String> l) {
+        var index = -1;
+        for (final var line : l) {
             if (index == -1) {
-                index = addLore(Type.CUSTOM, "", line);
+                index = this.addLore(Type.CUSTOM, "", line);
                 index++;
             } else {
-                lore.add(index, Type.CUSTOM.id + line);
+                this.lore.add(index, Type.CUSTOM.id + line);
                 index++;
             }
         }
@@ -122,14 +180,14 @@ public class BrewLore {
      *
      * @param qualityColor If the lore should have colors according to quality
      */
-    public void updateIngredientLore(boolean qualityColor) {
-        if (qualityColor && brew.hasRecipe() && !brew.isStripped()) {
-            int quality = brew.getIngredients().getIngredientQuality(brew.getCurrentRecipe());
-            String prefix = getQualityColor(quality);
-            char icon = getQualityIcon(quality);
-            addOrReplaceLore(Type.INGR, prefix, lang.getEntry("Brew_Ingredients"), " " + icon);
+    public final void updateIngredientLore(final boolean qualityColor) {
+        if (qualityColor && this.brew.hasRecipe() && !this.brew.isStripped()) {
+            final var quality = this.brew.getIngredients().getIngredientQuality(this.brew.getCurrentRecipe());
+            final var prefix = getQualityColor(quality);
+            final var icon = getQualityIcon(quality);
+            this.addOrReplaceLore(Type.INGR, prefix, lang.getEntry("Brew_Ingredients"), " " + icon);
         } else {
-            removeLore(Type.INGR, lang.getEntry("Brew_Ingredients"));
+            this.removeLore(Type.INGR, lang.getEntry("Brew_Ingredients"));
         }
     }
 
@@ -138,17 +196,17 @@ public class BrewLore {
      *
      * @param qualityColor If the lore should have colors according to quality
      */
-    public void updateCookLore(boolean qualityColor) {
-        if (qualityColor && brew.hasRecipe() && brew.getDistillRuns() > 0 == brew.getCurrentRecipe().needsDistilling() && !brew.isStripped()) {
-            BIngredients ingredients = brew.getIngredients();
-            int quality = ingredients.getCookingQuality(brew.getCurrentRecipe(), brew.getDistillRuns() > 0);
-            String prefix = getQualityColor(quality) + ingredients.getCookedTime() + " " + lang.getEntry("Brew_minute");
+    public final void updateCookLore(final boolean qualityColor) {
+        if (qualityColor && this.brew.hasRecipe() && this.brew.getDistillRuns() > 0 == this.brew.getCurrentRecipe().needsDistilling() && !this.brew.isStripped()) {
+            final var ingredients = this.brew.getIngredients();
+            final var quality = ingredients.getCookingQuality(this.brew.getCurrentRecipe(), this.brew.getDistillRuns() > 0);
+            var prefix = getQualityColor(quality) + ingredients.getCookedTime() + " " + lang.getEntry("Brew_minute");
             if (ingredients.getCookedTime() > 1) {
                 prefix = prefix + lang.getEntry("Brew_MinutePluralPostfix");
             }
-            addOrReplaceLore(Type.COOK, prefix, " " + lang.getEntry("Brew_fermented"), " " + getQualityIcon(quality));
+            this.addOrReplaceLore(Type.COOK, prefix, " " + lang.getEntry("Brew_fermented"), " " + getQualityIcon(quality));
         } else {
-            removeLore(Type.COOK, lang.getEntry("Brew_fermented"));
+            this.removeLore(Type.COOK, lang.getEntry("Brew_fermented"));
         }
     }
 
@@ -157,27 +215,27 @@ public class BrewLore {
      *
      * @param qualityColor If the lore should have colors according to quality
      */
-    public void updateDistillLore(boolean qualityColor) {
-        if (brew.getDistillRuns() <= 0) return;
+    public final void updateDistillLore(final boolean qualityColor) {
+        if (this.brew.getDistillRuns() <= 0) return;
         String prefix;
-        String suffix = "";
-        byte distillRuns = brew.getDistillRuns();
-        if (qualityColor && !brew.isUnlabeled() && brew.hasRecipe()) {
-            int quality = brew.getIngredients().getDistillQuality(brew.getCurrentRecipe(), distillRuns);
+        var suffix = "";
+        final var distillRuns = this.brew.getDistillRuns();
+        if (qualityColor && !this.brew.isUnlabeled() && this.brew.hasRecipe()) {
+            final var quality = this.brew.getIngredients().getDistillQuality(this.brew.getCurrentRecipe(), distillRuns);
             prefix = getQualityColor(quality);
             suffix = " " + getQualityIcon(quality);
         } else {
             prefix = "§7";
         }
-        if (!brew.isUnlabeled()) {
+        if (!this.brew.isUnlabeled()) {
             if (distillRuns > 1) {
                 prefix = prefix + distillRuns + " " + lang.getEntry("Brew_times") + " ";
             }
         }
-        if (brew.isUnlabeled() && brew.hasRecipe() && distillRuns < brew.getCurrentRecipe().getDistillruns()) {
-            addOrReplaceLore(Type.DISTILL, prefix, lang.getEntry("Brew_LessDistilled"), suffix);
+        if (this.brew.isUnlabeled() && this.brew.hasRecipe() && distillRuns < this.brew.getCurrentRecipe().getDistillruns()) {
+            this.addOrReplaceLore(Type.DISTILL, prefix, lang.getEntry("Brew_LessDistilled"), suffix);
         } else {
-            addOrReplaceLore(Type.DISTILL, prefix, lang.getEntry("Brew_Distilled"), suffix);
+            this.addOrReplaceLore(Type.DISTILL, prefix, lang.getEntry("Brew_Distilled"), suffix);
         }
     }
 
@@ -186,19 +244,19 @@ public class BrewLore {
      *
      * @param qualityColor If the lore should have colors according to quality
      */
-    public void updateAgeLore(boolean qualityColor) {
-        if (brew.isStripped()) return;
+    public final void updateAgeLore(final boolean qualityColor) {
+        if (this.brew.isStripped()) return;
         String prefix;
-        String suffix = "";
-        float age = brew.getAgeTime();
-        if (qualityColor && !brew.isUnlabeled() && brew.hasRecipe()) {
-            int quality = brew.getIngredients().getAgeQuality(brew.getCurrentRecipe(), age);
+        var suffix = "";
+        final var age = this.brew.getAgeTime();
+        if (qualityColor && !this.brew.isUnlabeled() && this.brew.hasRecipe()) {
+            final var quality = this.brew.getIngredients().getAgeQuality(this.brew.getCurrentRecipe(), age);
             prefix = getQualityColor(quality);
             suffix = " " + getQualityIcon(quality);
         } else {
             prefix = "§7";
         }
-        if (!brew.isUnlabeled()) {
+        if (!this.brew.isUnlabeled()) {
             if (age >= 1 && age < 2) {
                 prefix = prefix + lang.getEntry("Brew_OneYear") + " ";
             } else if (age < 201) {
@@ -208,7 +266,7 @@ public class BrewLore {
             }
         }
         if (age > 0) {
-            addOrReplaceLore(Type.AGE, prefix, lang.getEntry("Brew_BarrelRiped"), suffix);
+            this.addOrReplaceLore(Type.AGE, prefix, lang.getEntry("Brew_BarrelRiped"), suffix);
         }
     }
 
@@ -217,51 +275,50 @@ public class BrewLore {
      *
      * @param qualityColor If the lore should have colors according to quality
      */
-    public void updateWoodLore(boolean qualityColor) {
-        if (qualityColor && brew.hasRecipe() && !brew.isUnlabeled()) {
-            int quality = brew.getIngredients().getWoodQuality(brew.getCurrentRecipe(), brew.getWood());
-            addOrReplaceLore(Type.WOOD, getQualityColor(quality), lang.getEntry("Brew_Woodtype"), " " + getQualityIcon(quality));
+    public final void updateWoodLore(final boolean qualityColor) {
+        if (qualityColor && this.brew.hasRecipe() && !this.brew.isUnlabeled()) {
+            final var quality = this.brew.getIngredients().getWoodQuality(this.brew.getCurrentRecipe(), this.brew.getWood());
+            this.addOrReplaceLore(Type.WOOD, getQualityColor(quality), lang.getEntry("Brew_Woodtype"), " " + getQualityIcon(quality));
         } else {
-            removeLore(Type.WOOD, lang.getEntry("Brew_Woodtype"));
+            this.removeLore(Type.WOOD, lang.getEntry("Brew_Woodtype"));
         }
     }
 
     /**
      * updates the Custom Lore
      */
-    public void updateCustomLore() {
-        removeLore(Type.CUSTOM);
+    public final void updateCustomLore() {
+        this.removeLore(Type.CUSTOM);
 
-        BRecipe recipe = brew.getCurrentRecipe();
+        final var recipe = this.brew.getCurrentRecipe();
         if (recipe != null && recipe.hasLore()) {
-            int index = -1;
-            for (String line : recipe.getLoreForQuality(brew.getQuality())) {
+            var index = -1;
+            for (final var line : recipe.getLoreForQuality(this.brew.getQuality())) {
                 if (index == -1) {
-                    index = addLore(Type.CUSTOM, "", line);
+                    index = this.addLore(Type.CUSTOM, "", line);
                 } else {
-                    lore.add(index, Type.CUSTOM.id + line);
+                    this.lore.add(index, Type.CUSTOM.id + line);
                 }
                 index++;
             }
         }
     }
 
-    public void updateQualityStars(boolean qualityColor) {
-        updateQualityStars(qualityColor, false);
+    public final void updateQualityStars(final boolean qualityColor) {
+        this.updateQualityStars(qualityColor, false);
     }
 
-
-    public void updateQualityStars(boolean qualityColor, boolean withBars) {
-        if (brew.isStripped()) return;
-        if (brew.hasRecipe() && brew.getCurrentRecipe().needsToAge() && brew.getAgeTime() < 0.5) {
+    public final void updateQualityStars(final boolean qualityColor, final boolean withBars) {
+        if (this.brew.isStripped()) return;
+        if (this.brew.hasRecipe() && this.brew.getCurrentRecipe().needsToAge() && this.brew.getAgeTime() < 0.5) {
             return;
         }
-        int quality = brew.getQuality();
+        final var quality = this.brew.getQuality();
         if (quality > 0 && (qualityColor || config.isAlwaysShowQuality())) {
-            int stars = quality / 2;
-            boolean half = quality % 2 > 0;
-            int noStars = 5 - stars - (half ? 1 : 0);
-            StringBuilder b = new StringBuilder(24);
+            var stars = quality / 2;
+            final var half = quality % 2 > 0;
+            var noStars = 5 - stars - (half ? 1 : 0);
+            final var b = new StringBuilder(24);
             String color;
             if (qualityColor) {
                 color = getQualityColor(quality);
@@ -289,75 +346,75 @@ public class BrewLore {
                 }
                 b.append("§8]");
             }
-            addOrReplaceLore(Type.STARS, color, b.toString());
+            this.addOrReplaceLore(Type.STARS, color, b.toString());
         } else {
-            removeLore(Type.STARS);
+            this.removeLore(Type.STARS);
         }
     }
 
-    public void updateAlc(boolean inDistiller) {
-        int alc = brew.getOrCalcAlc();
-        if (!brew.isUnlabeled() && (inDistiller || config.isAlwaysShowAlc()) && alc != 0) {
-            addOrReplaceLore(Type.ALC, "§8", lang.getEntry("Brew_Alc", alc + ""));
+    public final void updateAlc(final boolean inDistiller) {
+        final var alc = this.brew.getOrCalcAlc();
+        if (!this.brew.isUnlabeled() && (inDistiller || config.isAlwaysShowAlc()) && alc != 0) {
+            this.addOrReplaceLore(Type.ALC, "§8", lang.getEntry("Brew_Alc", alc + ""));
         } else if (config.isAlwaysShowAlcIndicator() && alc > 0) {
-            addOrReplaceLore(Type.ALC, "§8", lang.getEntry("Brew_Alcoholic"));
+            this.addOrReplaceLore(Type.ALC, "§8", lang.getEntry("Brew_Alcoholic"));
         } else {
-            removeLore(Type.ALC);
+            this.removeLore(Type.ALC);
         }
     }
 
-    public void updateDefect(@Nullable String defectMessage) {
+    public final void updateDefect(@Nullable final String defectMessage) {
         if (defectMessage != null) {
-            if (Type.DEFECT.findInLore(lore) == -1) {
-                addOrReplaceLore(Type.DEFECT, "§c", defectMessage);
+            if (Type.DEFECT.findInLore(this.lore) == -1) {
+                this.addOrReplaceLore(Type.DEFECT, "§c", defectMessage);
             }
         } else {
-            removeLore(Type.DEFECT);
+            this.removeLore(Type.DEFECT);
         }
     }
 
-    public void updateBrewer(String name) {
+    public final void updateBrewer(final String name) {
         if (name != null && config.isShowBrewer()) {
-            addOrReplaceLore(Type.BREWER, "§8", lang.getEntry("Brew_Brewer", name));
+            this.addOrReplaceLore(Type.BREWER, "§8", lang.getEntry("Brew_Brewer", name));
         } else {
-            removeLore(Type.BREWER);
+            this.removeLore(Type.BREWER);
         }
     }
 
     /**
      * Converts to/from qualitycolored Lore
      */
-    public void convertLore(boolean toQuality) {
-        if (!brew.hasRecipe()) {
+    public final void convertLore(final boolean toQuality) {
+        if (!this.brew.hasRecipe()) {
             return;
         }
 
-        updateCustomLore();
-        if (toQuality && brew.isUnlabeled()) {
+        this.updateCustomLore();
+        if (toQuality && this.brew.isUnlabeled()) {
             return;
         }
-        updateQualityStars(toQuality);
+        this.updateQualityStars(toQuality);
 
         // Ingredients
-        updateIngredientLore(toQuality);
+        this.updateIngredientLore(toQuality);
 
         // Cooking
-        updateCookLore(toQuality);
+        this.updateCookLore(toQuality);
 
         // Distilling
-        updateDistillLore(toQuality);
+        this.updateDistillLore(toQuality);
 
         // Ageing
-        if (brew.getAgeTime() >= 1) {
-            updateAgeLore(toQuality);
+        if (this.brew.getAgeTime() >= 1) {
+            this.updateAgeLore(toQuality);
         }
 
         // WoodType
-        if (brew.getAgeTime() > 0.5) {
-            updateWoodLore(toQuality);
+        if (this.brew.getAgeTime() > 0.5) {
+            this.updateWoodLore(toQuality);
         }
 
-        updateAlc(false);
+        this.updateAlc(false);
     }
 
     /**
@@ -368,8 +425,8 @@ public class BrewLore {
      * @param prefix The Prefix to add to the line of lore
      * @param line   The Line of Lore to add or replace
      */
-    public int addOrReplaceLore(Type type, String prefix, String line) {
-        return addOrReplaceLore(type, prefix, line, "");
+    public final int addOrReplaceLore(final Type type, final String prefix, final String line) {
+        return this.addOrReplaceLore(type, prefix, line, "");
     }
 
     /**
@@ -381,19 +438,19 @@ public class BrewLore {
      * @param line   The Line of Lore to add or replace
      * @param suffix The Suffix to add to the line of lore
      */
-    public int addOrReplaceLore(Type type, String prefix, String line, String suffix) {
-        int index = type.findInLore(lore);
+    public final int addOrReplaceLore(final Type type, final String prefix, final String line, final String suffix) {
+        var index = type.findInLore(this.lore);
         if (index > -1) {
-            lore.set(index, type.id + prefix + line + suffix);
+            this.lore.set(index, type.id + prefix + line + suffix);
             return index;
         }
 
         // Could not find Lore by type, find and replace by substring
-        index = BUtil.indexOfSubstring(lore, line);
+        index = BUtil.indexOfSubstring(this.lore, line);
         if (index > -1) {
-            lore.remove(index);
+            this.lore.remove(index);
         }
-        return addLore(type, prefix, line, suffix);
+        return this.addLore(type, prefix, line, suffix);
     }
 
     /**
@@ -403,8 +460,8 @@ public class BrewLore {
      * @param prefix The Prefix to add to the line of lore
      * @param line   The Line of Lore to add or add
      */
-    public int addLore(Type type, String prefix, String line) {
-        return addLore(type, prefix, line, "");
+    public final int addLore(final Type type, final String prefix, final String line) {
+        return this.addLore(type, prefix, line, "");
     }
 
     /**
@@ -415,49 +472,49 @@ public class BrewLore {
      * @param line   The Line of Lore to add or add
      * @param suffix The Suffix to add to the line of lore
      */
-    public int addLore(Type type, String prefix, String line, String suffix) {
-        lineAddedOrRem = true;
-        for (int i = 0; i < lore.size(); i++) {
-            Type existing = Type.get(lore.get(i));
+    public final int addLore(final Type type, final String prefix, final String line, final String suffix) {
+        this.lineAddedOrRem = true;
+        for (var i = 0; i < this.lore.size(); i++) {
+            final var existing = Type.get(this.lore.get(i));
             if (existing != null && existing.isAfter(type)) {
-                lore.add(i, type.id + prefix + line + suffix);
+                this.lore.add(i, type.id + prefix + line + suffix);
                 return i;
             }
         }
-        lore.add(type.id + prefix + BUtil.color(line) + suffix); // TODO: Color
-        return lore.size() - 1;
+        this.lore.add(type.id + prefix + BUtil.color(line) + suffix); // TODO: Color
+        return this.lore.size() - 1;
     }
 
     /**
      * Searches for type and if not found for Substring lore and removes it
      */
-    public void removeLore(Type type, String line) {
-        int index = type.findInLore(lore);
+    public final void removeLore(final Type type, final String line) {
+        var index = type.findInLore(this.lore);
         if (index == -1) {
-            index = BUtil.indexOfSubstring(lore, line);
+            index = BUtil.indexOfSubstring(this.lore, line);
         }
         if (index > -1) {
-            lineAddedOrRem = true;
-            lore.remove(index);
+            this.lineAddedOrRem = true;
+            this.lore.remove(index);
         }
     }
 
     /**
      * Searches for type and removes it
      */
-    public void removeLore(Type type) {
+    public final void removeLore(final Type type) {
         if (type != Type.CUSTOM) {
-            int index = type.findInLore(lore);
+            final var index = type.findInLore(this.lore);
             if (index > -1) {
-                lineAddedOrRem = true;
-                lore.remove(index);
+                this.lineAddedOrRem = true;
+                this.lore.remove(index);
             }
         } else {
             // Lore could have multiple lines of this type
-            for (int i = lore.size() - 1; i >= 0; i--) {
-                if (Type.get(lore.get(i)) == type) {
-                    lore.remove(i);
-                    lineAddedOrRem = true;
+            for (var i = this.lore.size() - 1; i >= 0; i--) {
+                if (Type.get(this.lore.get(i)) == type) {
+                    this.lore.remove(i);
+                    this.lineAddedOrRem = true;
                 }
             }
         }
@@ -467,10 +524,10 @@ public class BrewLore {
      * Removes all Brew Lore lines
      */
     public void removeAll() {
-        for (int i = lore.size() - 1; i >= 0; i--) {
-            if (Type.get(lore.get(i)) != null) {
-                lore.remove(i);
-                lineAddedOrRem = true;
+        for (var i = this.lore.size() - 1; i >= 0; i--) {
+            if (Type.get(this.lore.get(i)) != null) {
+                this.lore.remove(i);
+                this.lineAddedOrRem = true;
             }
         }
     }
@@ -478,11 +535,11 @@ public class BrewLore {
     /**
      * Adds the Effect names to the Items description
      */
-    public void addOrReplaceEffects(List<BEffect> effects, int quality) {
+    public final void addOrReplaceEffects(final List<BEffect> effects, final int quality) {
         if (BreweryPlugin.getMCVersion().isOrEarlier(MinecraftVersion.V1_9) && effects != null) {
-            for (BEffect effect : effects) {
+            for (final var effect : effects) {
                 if (!effect.isHidden()) {
-                    effect.writeInto(meta, quality);
+                    effect.writeInto(this.meta, quality);
                 }
             }
         }
@@ -494,19 +551,19 @@ public class BrewLore {
      * @param index the index in lore to check
      * @return true if the line at index is of any Brew Lore type
      */
-    public boolean isBrewLore(int index) {
-        return index < lore.size() && Type.get(lore.get(index)) != null;
+    public boolean isBrewLore(final int index) {
+        return index < this.lore.size() && Type.get(this.lore.get(index)) != null;
     }
 
     /**
      * Removes all effects
      */
-    public void removeEffects() {
-        if (meta.hasCustomEffects()) {
-            for (PotionEffect effect : new ArrayList<>(meta.getCustomEffects())) {
-                PotionEffectType type = effect.getType();
+    public final void removeEffects() {
+        if (this.meta.hasCustomEffects()) {
+            for (final var effect : new ArrayList<>(this.meta.getCustomEffects())) {
+                final var type = effect.getType();
                 //if (!type.equals(PotionEffectType.REGENERATION)) {
-                meta.removeCustomEffect(type);
+                this.meta.removeCustomEffect(type);
                 //}
             }
         }
@@ -515,88 +572,26 @@ public class BrewLore {
     /**
      * Remove the Old Spacer from the legacy potion data system
      */
-    public void removeLegacySpacing() {
+    public final void removeLegacySpacing() {
         if (MinecraftVersion.isUseNBT()) {
             // Using NBT we don't get the invisible line, so we keep our spacing
             return;
         }
-        if (!lore.isEmpty() && lore.get(0).isEmpty()) {
-            lore.remove(0);
-            write();
+        if (!this.lore.isEmpty() && this.lore.getFirst().isEmpty()) {
+            this.lore.removeFirst();
+            this.write();
         }
     }
 
     /**
      * Remove any Brew Data from Lore
      */
-    public void removeLoreData() {
-        int index = BUtil.indexOfStart(lore, LoreSaveStream.IDENTIFIER);
+    public final void removeLoreData() {
+        final var index = BUtil.indexOfStart(this.lore, LoreSaveStream.IDENTIFIER);
         if (index != -1) {
-            lore.set(index, "");
-            write();
+            this.lore.set(index, "");
+            this.write();
         }
-    }
-
-    /**
-     * True if the PotionMeta has Lore in quality color
-     */
-    public static boolean hasColorLore(PotionMeta meta) {
-        if (meta == null) return false;
-        if (!meta.hasLore()) return false;
-        List<String> lore = meta.getLore();
-        if (lore.size() < 2) {
-            return false;
-        }
-        if (Type.INGR.findInLore(lore) != -1) {
-            // Ingredient lore present, must be quality colored
-            return true;
-        }
-        return false;
-        //!meta.getLore().get(1).startsWith("§7");
-    }
-
-    /**
-     * gets the Color that represents a quality in Lore
-     *
-     * @param quality The Quality for which to find the color code
-     * @return Color Code for given Quality
-     */
-    public static String getQualityColor(int quality) {
-        String color;
-        if (quality > 8) {
-            color = "&a";
-        } else if (quality > 6) {
-            color = "&e";
-        } else if (quality > 4) {
-            color = "&6";
-        } else if (quality > 2) {
-            color = "&c";
-        } else {
-            color = "&4";
-        }
-        return BUtil.color(color);
-    }
-
-    /**
-     * Gets the icon representing a quality for use in lore
-     *
-     * @param quality The quality used for the icon
-     * @return The icon for the given quality
-     */
-    public static char getQualityIcon(int quality) {
-        char icon;
-        if (quality > 8) {
-            icon = '\u2605';
-        } else if (quality > 6) {
-            icon = '\u2BEA';
-        } else if (quality > 4) {
-            icon = '\u2606';
-        } else if (quality > 2) {
-            icon = '\u2718';
-        } else {
-            icon = '\u2620';
-        }
-        return icon;
     }
 
     /**
@@ -622,35 +617,15 @@ public class BrewLore {
         /**
          * @param id Identifier as Prefix of the Loreline
          */
-        Type(String id) {
+        Type(final String id) {
             this.id = id;
-        }
-
-        /**
-         * Find this type in the Lore
-         *
-         * @param lore The lore to search in
-         * @return index of this type in the lore, -1 if not found
-         */
-        public int findInLore(List<String> lore) {
-            return BUtil.indexOfStart(lore, id);
-        }
-
-        /**
-         * Is this type after the other in lore
-         *
-         * @param other the other type
-         * @return true if this type should be after the other type in lore
-         */
-        public boolean isAfter(Type other) {
-            return other.ordinal() <= ordinal();
         }
 
         /**
          * Get the Type of the given line of Lore
          */
         @Nullable
-        public static Type get(String loreLine) {
+        public static Type get(final String loreLine) {
             if (loreLine.length() >= 2) {
                 return getById(loreLine.substring(0, 2));
             } else {
@@ -662,13 +637,33 @@ public class BrewLore {
          * Get the Type of the given Identifier, prefix of a line of lore
          */
         @Nullable
-        public static Type getById(String id) {
-            for (Type t : values()) {
+        public static Type getById(final String id) {
+            for (final var t : values()) {
                 if (t.id.equals(id)) {
                     return t;
                 }
             }
             return null;
+        }
+
+        /**
+         * Find this type in the Lore
+         *
+         * @param lore The lore to search in
+         * @return index of this type in the lore, -1 if not found
+         */
+        public int findInLore(final List<String> lore) {
+            return BUtil.indexOfStart(lore, this.id);
+        }
+
+        /**
+         * Is this type after the other in lore
+         *
+         * @param other the other type
+         * @return true if this type should be after the other type in lore
+         */
+        public boolean isAfter(final Type other) {
+            return other.ordinal() <= this.ordinal();
         }
 
     }
